JavaScript의 alert()와 console.log사용

--- a/JavaScript/output.html
+++ b/JavaScript/output.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>JavaScript Basic</title>
 <script type="text/javascript">
+// js의 실행은 html과 같이 위에서 밑으로 차례로 실행된다.
 // 그래서 위치는 실행하려고 하는 위치에 위치시킬 수 있다.
 
 // 데이터 출력 - 처리의 흐름 확인이나 데이터 확인 시 처리 명령
